# ai-code

./: .aider.chat.history.md  .aider.input.history  .gitignore  README.md
game/: .aider.conf.yml  .aider.model.metadata.json  .aider.model.settings.yml  README.md  README_EN.md  pyproject.toml  requirements.txt  tetris.py
game/docs/: architecture.md  gomoku.md  sokoban.md
game/src/: main.py
game/src/bomberman/: game.py
game/src/breakout/: game.py
game/src/common/: colors.py  utils.py
game/src/flappybird/: game.py
game/src/game2048/: game.py
game/src/gomoku/: game.py
game/src/jungle/: constants.py  game.py  pieces.py
game/src/lianliankan/: game.py
game/src/memory/: game.py
game/src/minesweeper/: game.py
game/src/plane/: game.py
game/src/snake/: game.py
game/src/sokoban/: __init__.py  game.py
game/src/spaceshield/: game.py
game/src/sudoku/: game.py
game/src/tetris/: game.py  shapes.py
game/src/xiangqi/: __init__.py  ai.py  game.py
llm-test/code_test/: Qwen2.5-VL-72B-Instruct.py  deepseek-r1-671b.py  deepseek-r1-qwen32.py  deepseek-v3.py  gemini2.0flash-thinking.py  gemini2.0flash.py  gpt4o.py  kimi.py  question.md  qwen2.5-coder-32b.py  qwen2.5-max-normal.py  qwen32b.py  sonet3.5.py  sonet3.7.py
website/: discover.html  home.html  index.html  message.html  profile.html  publish.html
